docs: todos update and deletion
