# src/swagger.json
@@ -351,17 +351,16 @@
       },
       "get": {
         "tags": ["Todos"],
-        "summary": "Get todos.",
-        "description": "Get all todos an account owns.",
+        "summary": "Gets todos.",
+        "description": "Gets all todos an account owns.",
         "security": [{ "bearerAuth": [] }],
         "responses": {
           "200": {
             "description": "All todos received.",
             "content": {
               "application/json": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/definitions/todo"
+                "schema": {
+                  "$ref": "#/definitions/todosArray"
                 }
               }
             }
@@ -396,8 +395,8 @@
     "/todos/{id}": {
       "get": {
         "tags": ["Todos"],
-        "summary": "Get an unique todo.",
-        "description": "Get a todo using its id.",
+        "summary": "Gets an unique todo.",
+        "description": "Gets a todo using its id.",
         "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
@@ -422,6 +421,203 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "Invalid uuid was sent.",
+            "content": {
+              "application/json": {
+                "type": "object",
+                "example": {
+                  "message": "Invalid uuid."
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Token not received, expired or invalid.",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Token not received": {
+                    "value": {
+                      "message": "Token not received."
+                    }
+                  },
+                  "Token expired": {
+                    "value": {
+                      "message": "Expired token."
+                    }
+                  },
+                  "Invalid token": {
+                    "value": {
+                      "message": "Invalid token."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Account is not the owner of the todo.",
+            "content": {
+              "application/json": {
+                "type": "object",
+                "example": {
+                  "message": "Not allowed."
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "A todo with that id was not found.",
+            "content": {
+              "application/json": {
+                "type": "object",
+                "example": {
+                  "message": "Todo not found."
+                }
+              }
+            }
+          }
+        }
+      },
+      "patch": {
+        "tags": ["Todos"],
+        "summary": "It updates an unique todo.",
+        "description": "It updates a todo using its id, possibly changing its content, is_completed and/or due_to.",
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Todo's ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "content": {
+                    "type": "string",
+                    "required": false
+                  },
+                  "is_completed": {
+                    "type": "boolean",
+                    "required": false
+                  },
+                  "due_to": {
+                    "type": "string",
+                    "format": "date-time",
+                    "required": false
+                  }
+                },
+                "example": {
+                  "content": "Updated todo",
+                  "is_completed": true,
+                  "due_to": "2023-10-07T23:00:44.961Z"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Todo was updated.",
+            "content": {
+              "application/json": {
+                "type": "object",
+                "schema": {
+                  "$ref": "#/definitions/todo"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid uuid was sent.",
+            "content": {
+              "application/json": {
+                "type": "object",
+                "example": {
+                  "message": "Invalid uuid."
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Token not received, expired or invalid.",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Token not received": {
+                    "value": {
+                      "message": "Token not received."
+                    }
+                  },
+                  "Token expired": {
+                    "value": {
+                      "message": "Expired token."
+                    }
+                  },
+                  "Invalid token": {
+                    "value": {
+                      "message": "Invalid token."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Account is not the owner of the todo.",
+            "content": {
+              "application/json": {
+                "type": "object",
+                "example": {
+                  "message": "Not allowed."
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "A todo with that id was not found.",
+            "content": {
+              "application/json": {
+                "type": "object",
+                "example": {
+                  "message": "Todo not found."
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Todos"],
+        "summary": "Deletes an unique todo.",
+        "description": "Deletes a todo using its id.",
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Todo's ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Todo was deleted."
           },
           "400": {
             "description": "Invalid uuid was sent.",
@@ -530,8 +726,14 @@
         "id": { "type": "string", "format": "uuid" },
         "is_completed": { "type": "boolean" },
         "content": { "type": "string" },
-        "due_to": { "type": "string", "format": "date-time" },
+        "due_to": { "type": "string", "format": "date-time", "nullable": true },
         "created_at": { "type": "string", "format": "date-time" }
+      }
+    },
+    "todosArray": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/todo"
       }
     }
   },
